@@ -1,4 +1,6 @@
 1.9.3:
+* Client: And peer that you connect to manually, automatically gets marked as Special (no auto-dropping)
+* Client: Automatically connect to IPs from file "friends.txt" (inside the client/ folder)
 * Client/WebUI/MakeTx: Show P2SH-WPKH instead of P2KH, only if currently selected wallet contains "# Auto-translate to SegWit"
 * Client/WebUI/MakeTx: Address Book shows auto calculated P2SH-WPKH Addresses from currently selected wallet
 * Client: Show real endpoint's TCP port for incomming connections
